# catimini

./: Cargo.toml  README.md
src/: address.rs  error.rs  lib.rs  receiver.rs  sender.rs
tests/: vector_tests.rs
tests/common/: input.rs  mod.rs  structs.rs  utils.rs
tests/resources/: send_and_receive_test_vectors.json  test_vectors.json
